<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">乐投</string>
    <string name="action_settings">setting</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">乐投</string>
    <string name="title_activity_message_detail">MessageDetailActivity</string>
    <string name="title_activity_vote_result">VoteResultActivity</string>
    <string name="title_activity_new_poll">NewPollActivity</string>
    <string name="login_account">账号</string>
	<string name="login_password">请输入密码</string>
	<string name="login_btn">登陆</string>
	<string name="login_regist">注册账号</string>
	<string name="login_forget">忘记密码</string>
	<string name="register_btn">注册</string>
	<string name="register_back">返回</string>
	<string name="register_title">注册</string>
	<string name="register_account">请输入注册账号</string>
	<string name="register_password_confirm">请再次确认密码</string>
	 <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
     <string name="action_edit">发起投票</string>
       <string name="action_search">查询投票</string>
</resources>
